<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">Enhanced Domotic</string>
  <string name="activity_setting">Settings</string>
  <string name="activity_light">Light</string>
  <string name="activity_ipcam">Ipcam</string>
  
  <string name="progress_dialog_load">Loading</string>
  <string name="connection_error">Connection error</string>
  
  <string name="drawer_open">Open navigation drawer</string>
  <string name="drawer_close">Close navigation drawer</string>
  
  <!-- preference -->
  <string name="preference_key_protocol">preference_protocol</string>
  <string name="preference_key_host">preference_host</string>
  <string name="preference_key_port">preference_port</string>
  <string name="preference_title_main">Domotic Configuration</string>
  <string name="preference_title_protocol">Protocol</string>
  <string name="preference_title_host">Host</string>
  <string name="preference_title_port">Port</string>
  <string name="preference_bad_value">Value not allowed</string>
  <string name="preference_default_protocol">OPENWEBNET</string>
  <string name="preference_default_host">0.0.0.0</string>
  <string name="preference_default_port">20000</string>
  
  <!-- validation -->
  <string name="validation_required">Required field</string>
  <string name="validation_light">Number between 11 and 99 only</string>
  
  <!-- error -->
  <string name="error_connection">Check your internet connection</string>
  <string name="error_url">Invalid url</string>
  
  <!-- label -->
  <string name="label_add">Add</string>
  <string name="label_edit">Edit</string>
  <string name="label_none">none</string>
  <string name="label_device_id">Device id</string>
  <string name="label_name">Name</string>
  <string name="label_description">Description</string>
  <string name="label_username">Username</string>
  <string name="label_password">Password</string>
  <string name="label_url">Url</string>
  <string name="label_no_items">No items</string>
  
  <!-- dialog -->
  <string name="dialog_delete_title_delete">Delete</string>
  <string name="dialog_delete_message_confirm">Are you sure?</string>
  
</resources>