<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" >

  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp" >

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingLeft="4dp"
      android:text="@string/label_url" />

    <EditText
      android:id="@+id/editText_editIpcamUrl"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textMultiLine|textUri" />

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingLeft="4dp"
      android:text="@string/label_name" />

    <EditText
      android:id="@+id/editText_editIpcamName"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="text" />

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingLeft="4dp"
      android:text="@string/label_username" />

    <EditText
      android:id="@+id/editText_editIpcamUsername"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="text" />

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingLeft="4dp"
      android:text="@string/label_password" />

    <EditText
      android:id="@+id/editText_editIpcamPassword"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPassword" />

    <include layout="@layout/button_edit" />
    
  </LinearLayout>

</ScrollView>