<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" >

  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp" >

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingLeft="4dp"
      android:text="@string/label_device_id" />

    <EditText
      android:id="@+id/editText_editLightDeviceId"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:imeOptions="actionNext"
      android:inputType="number" />

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingLeft="4dp"
      android:text="@string/label_name" />

    <EditText
      android:id="@+id/editText_editLightName"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:imeOptions="actionNext"
      android:inputType="text" />

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingLeft="4dp"
      android:text="@string/label_description" />

    <EditText
      android:id="@+id/editText_editLightDescription"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:imeOptions="actionDone"
      android:inputType="textMultiLine" />

    <include layout="@layout/button_edit" />
    
  </LinearLayout>

</ScrollView>